fix: added ignoring unknown keys for schema, changed getText to actual get request
