# docs/swagger.json
@@ -334,13 +334,18 @@
                         "in": "query"
                     },
                     {
-                        "description": "song info",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.GetTextRequest"
-                        }
+                        "type": "string",
+                        "description": "group name",
+                        "name": "group",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "song name",
+                        "name": "song",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -433,21 +438,6 @@
                     "type": "string"
                 },
                 "text": {
-                    "type": "string"
-                }
-            }
-        },
-        "dto.GetTextRequest": {
-            "type": "object",
-            "required": [
-                "group",
-                "song"
-            ],
-            "properties": {
-                "group": {
-                    "type": "string"
-                },
-                "song": {
                     "type": "string"
                 }
             }
